--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,17 +5,30 @@
  */
 
 :root {
+	--wine-red: #521407;
+	--peachy-pink: #F9D4D2;
+	--dusty-pink: #C6B9BA;
+	--black: #222222;
+	--white: #FEFEFE;
+	--grey-light: #F3F3F3;
+	--grey-dark: #616161;
+	--dark-blue: #1A1852;
+	--dark-green: #1F391B;
+
+	--margin-sm: 0.625em;
+	--margin-md: 1em;
+	--margin-lg: 1.5em;
+
+	--border-radius: 0.75em; 
+
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
-	--gray: 96, 115, 159;
-	--gray-light: 229, 233, 240;
-	--gray-dark: 34, 41, 57;
-	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
+	--gray-gradient: var(--wine-red), var(--peachy-pink);
 	--box-shadow:
 		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
 		rgba(var(--gray), 33%);
 }
+/*
 @font-face {
 	font-family: "Atkinson";
 	src: url("/fonts/atkinson-regular.woff") format("woff");
@@ -30,17 +43,19 @@
 	font-style: normal;
 	font-display: swap;
 }
+*/
 body {
-	font-family: "Atkinson", sans-serif;
+	font-family: "Fira sans", sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
-	background-size: 100% 600px;
+	/*background: linear-gradient(var(--gray-gradient)) no-repeat;
+	background-size: 100% 600px;*/
+	background-color: var(--wine-red);
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
-	font-size: 20px;
+	font-size: 1em;
 	line-height: 1.7;
 }
 main {
@@ -55,21 +70,24 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: "Caprasimo", serif;
+	font-weight: 400;
+	font-style: normal;
 	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
+	color: var(--wine-red);
 	line-height: 1.2;
 }
 h1 {
-	font-size: 3.052em;
+	font-size: 6em;
 }
 h2 {
-	font-size: 2.441em;
+	font-size: 3em;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 2em;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.5em;
 }
 h5 {
 	font-size: 1.25em;
@@ -90,6 +108,24 @@ p {
 .prose p {
 	margin-bottom: 2em;
 }
+
+main {
+	background-color: var(--peachy-pink);
+}
+
+.portfolio-list {
+	list-style-type: none;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	padding-inline-start: 0;
+}
+
+.portfolio-list li {
+	border-radius: var(--border-radius);
+	border: 0.5em solid var(--wine-red)
+}
+
+
 textarea {
 	width: 100%;
 	font-size: 16px;
