--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
+
 import { Image } from 'astro:assets';
 
 import BaseHead from '../components/BaseHead.astro';
@@ -8,9 +10,13 @@ import Header from '../components/Header.astro';
 import PortfolioCard from '../components/PortfolioCard.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 
-const posts = (await getCollection('portfolio')).sort(
-	(a, b) => b.data.date.valueOf() - a.data.date.valueOf(),
-);
+const posts = (await getCollection('portfolio'))
+
+const sortPosts = (
+  a: CollectionEntry<'portfolio'>,
+  b: CollectionEntry<'portfolio'>
+) => a.data.title.localeCompare(b.data.title);
+
 ---
 
 <!doctype html>
@@ -25,23 +31,16 @@ const posts = (await getCollection('portfolio')).sort(
 			<section>
 				<ul class="portfolio-list">
 					{
-						posts.map((post) => (
-							<li>
-								<a href={`/portfolio/${post.id}/`}>
-									{post.data.cover && (
-										<Image width={720} height={360} src={post.data.cover} alt={post.data.coverAlt} />
-									)}
-									<h4 class="title">{post.data.title}</h4>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-				<ul class="portfolio-list">
-					{
-						posts.map((post) => (
-							<PortfolioCard post={post} />
-						))
+						posts
+							.sort(sortPosts)
+							.map((post) => (
+								<PortfolioCard 
+									cover={post.data.cover}
+									coverAlt={post.data.coverAlt}
+									url={`/portfolio/${post.id}/`}
+									title={post.data.title}
+								/>
+							))
 					}
 				</ul>
 			</section>
