--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,6 +112,12 @@ p {
 main {
 	background-color: var(--peachy-pink);
 }
+.wine-red {
+	background-color: var(--wine-red);
+}
+.peachy-pink {
+	background-color: var(--peachy-pink);
+}
 
 .portfolio-list {
 	list-style-type: none;
