--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,15 +12,23 @@ const {title, description, background} = Astro.props;
 //const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
+<!doctype html>
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
 		<style>
-			main {
-				width: calc(100% - 2em);
+            main {
+                /*
+                width: calc(100% - 2em);
 				max-width: 100%;
 				margin: 0;
-			}
+                */
+                width: 720px;
+                max-width: calc(100% - 2em);
+                margin: auto;
+                padding: 2em 1em;
+            }
+
 			.hero-image {
 				width: 100%;
 			}
@@ -53,6 +61,15 @@ const {title, description, background} = Astro.props;
 			.last-updated-on {
 				font-style: italic;
 			}
+
+            @media (max-width: 720px) {
+                body {
+                    font-size: 1.125em;
+                }
+                main {
+                    padding: 1em;
+                }
+            }
 		</style>
 	</head>
 
