--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import PortfolioCard from '../components/PortfolioCard.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const posts = (await getCollection('portfolio'))
 
@@ -19,41 +20,35 @@ const sortPosts = (
 
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>Storm</h1>
-			<section>
-				<ul class="portfolio-list">
-					{
-						posts
-							.sort(sortPosts)
-							.map((post) => (
-								<PortfolioCard 
-									cover={post.data.cover}
-									coverAlt={post.data.coverAlt}
-									url={`/portfolio/${post.id}/`}
-									title={post.data.title}
-								/>
-							))
-					}
-				</ul>
-			</section>
-			
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-		</main>
-		<Footer />
-	</body>
-</html>
+<BaseLayout
+	title={SITE_TITLE}
+	description={SITE_DESCRIPTION}
+	background="peachy-pink"
+>
+	<h1>Storm</h1>
+	<section>
+		<ul class="portfolio-list">
+			{
+				posts
+					.sort(sortPosts)
+					.map((post) => (
+						<PortfolioCard 
+							cover={post.data.cover}
+							coverAlt={post.data.coverAlt}
+							url={`/portfolio/${post.id}/`}
+							title={post.data.title}
+						/>
+					))
+			}
+		</ul>
+	</section>
+	
+	<p>Here are a few ideas on how to get started with the template:</p>
+	<ul>
+		<li>Edit this page in <code>src/pages/index.astro</code></li>
+		<li>Edit the site header items in <code>src/components/Header.astro</code></li>
+		<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
+		<li>Check out the included blog posts in <code>src/content/blog/</code></li>
+		<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+	</ul>
+</BaseLayout>
