--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,7 +62,7 @@ main {
 	width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 2em 1em;
 }
 h1,
 h2,
@@ -168,7 +168,7 @@ hr {
 }
 @media (max-width: 720px) {
 	body {
-		font-size: 18px;
+		font-size: 1.125em;
 	}
 	main {
 		padding: 1em;
