change responsive styling on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 	}
 
 	.about-img {
-		max-width: 45vw;
+		max-width: 45%;
 		max-height: auto;
 		border-radius: var(--border-radius);
 		overflow: hidden;
@@ -30,7 +30,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 	.about-text {
 		background-color: var(--peachy-pink);
-		max-width: 45vw;
+		max-width: 45%;
 		border-radius: var(--border-radius);
 		padding: var(--margin-md);
 	}
