--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,10 +41,11 @@ const today = new Date();
 </footer>
 <style>
 	footer {
-		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
+		padding: 2em 1em 4em 1em;
+		background: var(--peachy-pink);
+		color: var(--wine-red);
 		text-align: center;
+		margin-top: 1em;
 	}
 	.social-links {
 		display: flex;
