--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,13 +3,9 @@ import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
 import Header from '../components/Header.astro';
 
-//type Props = CollectionEntry<'blog'>['data'];
-
 const {title, description, background} = Astro.props;
-//const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <!doctype html>
@@ -18,15 +14,11 @@ const {title, description, background} = Astro.props;
 		<BaseHead title={title} description={description} />
 		<style>
             main {
-                /*
-                width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-                */
                 width: 720px;
                 max-width: calc(100% - 2em);
                 margin: auto;
                 padding: 2em 1em;
+                border-radius: var(--border-radius);
             }
 
 			.hero-image {
