update config for github pages deployment

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,10 @@ import HeaderLink from './HeaderLink.astro';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/portfolio">Portfolio</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
-			<HeaderLink href="/contact">Contact</HeaderLink>
+			<HeaderLink href="/storm/">Home</HeaderLink>
+			<HeaderLink href="/storm/portfolio">Portfolio</HeaderLink>
+			<HeaderLink href="/storm/about">About</HeaderLink>
+			<HeaderLink href="/storm/contact">Contact</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
