change base URL in config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const sortPosts = (
 						<PortfolioCard 
 							cover={post.data.cover}
 							coverAlt={post.data.coverAlt}
-							url={`/storm/portfolio/${post.id}/`}
+							url={`/portfolio/${post.id}/`}
 							title={post.data.title}
 						/>
 					))
