--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import HeaderLink from './HeaderLink.astro';
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<h2><a href="/storm/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/storm/">Home</HeaderLink>
 			<HeaderLink href="/storm/portfolio">Portfolio</HeaderLink>
