--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,15 @@ import PortfolioCard from '../components/PortfolioCard.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-const posts = (await getCollection('portfolio'))
+//const posts = (await getCollection('portfolio'))
 
 const sortPosts = (
   a: CollectionEntry<'portfolio'>,
   b: CollectionEntry<'portfolio'>
 ) => a.data.title.localeCompare(b.data.title);
+
+const featuredPosts = await getCollection('portfolio', ({ data }) => data.featured === true);
+
 
 ---
 
@@ -29,7 +32,7 @@ const sortPosts = (
 	<section>
 		<ul class="portfolio-list">
 			{
-				posts
+				featuredPosts
 					.sort(sortPosts)
 					.map((post) => (
 						<PortfolioCard 
@@ -42,13 +45,4 @@ const sortPosts = (
 			}
 		</ul>
 	</section>
-	
-	<p>Here are a few ideas on how to get started with the template:</p>
-	<ul>
-		<li>Edit this page in <code>src/pages/index.astro</code></li>
-		<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-		<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-		<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-		<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-	</ul>
 </BaseLayout>
