add styling to index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Header from '../components/Header.astro';
 import PortfolioCard from '../components/PortfolioCard.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import '../styles/index.css';
 
 //const posts = (await getCollection('portfolio'))
 
