--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -145,6 +145,13 @@ hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray-light));
 }
+
+@media (max-width: 600px) {
+	main {
+		padding: 1em;
+	}
+}
+
 @media (max-width: 720px) {
 	main {
 		padding: 1em;
