--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -1,7 +1,10 @@
 ---
 import { Image } from 'astro:assets';
+import { render } from "astro:content";
 
-const { title, description, date, updatedDate, cover, coverAlt, link, additionalImg } = Astro.props;
+const { title, cover, coverAlt, text } = Astro.props;
+
+const { Content } = await render(text);
 
 ---
 <div class="container">
@@ -18,6 +21,7 @@ const { title, description, date, updatedDate, cover, coverAlt, link, additional
     <slot />
     <div class="about-text about-item">
         <h2>{title}</h2>
+        <Content />
         <slot name="text" />
     </div>
 </div>
