--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -33,6 +33,10 @@ const { Content } = await render(text);
 		gap: 1em;
 	}
 
+    .container:nth-child(even) {
+		flex-direction: row-reverse;
+	}
+
 	.about-img {
 		max-width: 45%;
 		max-height: auto;
@@ -61,7 +65,32 @@ const { Content } = await render(text);
 		flex: 0 0 auto;
 	}
 
-    .container:nth-child(even) {
-		flex-direction: row-reverse;
-	}
+    @media (max-width: 600px) {
+        .container {
+            flex-direction: column;
+        }
+
+        .container:nth-child(even) {
+		    flex-direction: column;
+	    }
+
+        .about-img {
+		    min-width: 100%;
+            height: 70vh;
+        }
+
+        .about-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .about-text {
+		    max-width: 100%;
+        }
+
+        .about-item {
+            flex: 0 1 auto;
+        }
+    }
 </style>
