--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,14 @@ import MenuIcon from "../assets/icons/menu.svg";
 
 <header>
 	<nav>
-		<h2><a href="/storm/">{SITE_TITLE}</a></h2>
+		<a href="/storm/" class="page-title">
+			<div class="blink">
+				<span class="sr-only">Storm Philippa Clarén</span>
+			</div>
+			<h2>
+				{SITE_TITLE}
+			</h2>
+		</a>
 		<button class="menu-button">
 			<MenuIcon
 				width={32}
@@ -42,6 +49,25 @@ import MenuIcon from "../assets/icons/menu.svg";
 		background-color: var(--peachy-pink);
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
+
+	.page-title {
+		display: flex;
+	}
+
+	.blink {
+		display: flex;
+		align-items: center;
+        width: 48px;
+        height: 64px;
+        background-image: url('src/assets/no-blink.png');
+        background-size: cover;
+    }
+
+	.page-title:hover > .blink {
+        background-image: url('src/assets/blink.gif');
+        background-size: cover;
+    }
+
 	h2 {
 		margin: 0;
 		font-size: clamp(1em, 2.5vw, 3em);
