update styling on index

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,12 +59,12 @@ import MenuIcon from "../assets/icons/menu.svg";
 		align-items: center;
         width: 48px;
         height: 64px;
-        background-image: url('src/assets/no-blink.png');
+        background-image: url('../assets/no-blink.png');
         background-size: cover;
     }
 
 	.page-title:hover > .blink {
-        background-image: url('src/assets/blink.gif');
+        background-image: url('../assets/blink.gif');
         background-size: cover;
     }
 
