add class to home title for styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const featuredPosts = await getCollection('portfolio', ({ data }) => data.featur
 	description={SITE_DESCRIPTION}
 	background="wine-red"
 >
-	<h1>Storm</h1>
+	<h1 class="home-title">Storm</h1>
 	<div class="home">
 		<ul class="portfolio-list">
 			{
