change styling for about page

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -30,7 +30,7 @@ const { Content } = await render(text);
     .container {
 		display: flex;
 		justify-content: space-between;
-		gap: 1em;
+		gap: 2em;
 	}
 
     .container:nth-child(even) {
@@ -42,6 +42,7 @@ const { Content } = await render(text);
 		max-height: auto;
 		border-radius: var(--border-radius);
 		overflow: hidden;
+        /*border: 0.5em solid var(--wine-red);*/
 	}
 
 	.about-img img {
@@ -55,6 +56,7 @@ const { Content } = await render(text);
 		max-width: 45%;
 		border-radius: var(--border-radius);
 		padding: var(--margin-md);
+        /*border: 0.5em solid var(--wine-red);*/
 	}
 
     h2 {
