--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,11 @@ const sortPosts = (
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 1em;
+		gap: 2em;
+		background-color: var(--wine-red);
+		/*background-color: var(--peachy-pink);*/
+		padding: 1em;
+		border-radius: var(--border-radius);
 	}
 </style>
 
