--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getCollection } from 'astro:content';
 import type { CollectionEntry } from "astro:content";
 import PortfolioCard from '../../components/PortfolioCard.astro';
+import PageTitle from "../../components/PageTitle.astro";
 
 const posts = (await getCollection('portfolio'))
 
@@ -39,7 +40,10 @@ const sortPosts = (
     description="Lorem ipsum dolor sit amet"
     background="wine-red"
 >
-    <h1>Portfolio</h1>
+    <PageTitle 
+        title="Portfolio"
+        color="text-peachy-pink"
+    />
     <div class="portfolio-section">
         <ul class="portfolio-grid">
 			{
