--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -30,7 +30,7 @@ const { Content } = await render(text);
     .container {
 		display: flex;
 		justify-content: space-between;
-		gap: 2em;
+		gap: var(--margin-xl);
 	}
 
     .container:nth-child(even) {
