--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,10 +23,10 @@ const sortPosts = (
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 2em;
+		gap: var(--margin-xl);
 		background-color: var(--wine-red);
 		/*background-color: var(--peachy-pink);*/
-		padding: 1em;
+		padding: var(--margin-md);
 		border-radius: var(--border-radius);
 	}
 </style>
