--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ import PageTitle from "../components/PageTitle.astro";
     }
 
     .socials-section {
-        margin-bottom: var(--margin-md);
+        margin-bottom: var(--margin-xl);
     }
 
     .social-item {
