--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -31,8 +31,22 @@ const sortPosts = (
         padding-inline-start: 0;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: var(--margin-md);
+        gap: var(--margin-xl);
         width: 100%;
+    }
+
+    @media (max-width: 600px) {
+        .portfolio-grid {
+            grid-template-columns: repeat(2, 1fr);
+            gap: var(--margin-md);
+        }
+    }
+
+    @media (min-width: 1024px) {
+        .portfolio-grid {
+            grid-template-columns: repeat(3, 1fr);
+            gap: var(--margin-md);
+        }
     }
 </style>
 <BaseLayout
