add responsive font-size to PageTitle

--- a/src/components/PageTitle.astro
+++ b/src/components/PageTitle.astro
@@ -14,4 +14,8 @@ const { title, color } = Astro.props;
     .text-wine-red {
         color: var(--wine-red);
     }
+
+    h1 {
+        font-size: clamp(3em, 15vw, 6em);
+    }
 </style>
