remove bottom margin from header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,7 +52,7 @@ import CloseIcon from "../assets/icons/close.svg";
 
 <style>
 	header {
-		margin: 0 0 1em;
+		margin: 0 0;
 		padding: 0 0.5em;
 		background-color: var(--peachy-pink);
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
