--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,7 +70,7 @@ import CloseIcon from "../assets/icons/close.svg";
         background-size: cover;
     }
 
-	.page-title:hover > .blink {
+	.header-title:hover > .blink {
         background-image: url('../assets/blink.gif');
         background-size: cover;
     }
