fix styling in header and body

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,7 @@ const {title, description, background} = Astro.props;
 		<style>
             main {
                 width: 720px;
+				/* width: 1000px; */
                 max-width: calc(100% - 2em);
                 margin: auto;
                 padding: 2em 1em;
