fix contact form design on mobile

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -114,6 +114,16 @@ import PageTitle from "../components/PageTitle.astro";
         color: var(--peachy-pink);
     }
 
+    @media (max-width: 600px) {
+        .contact-form {
+            width: 90%;
+        }
+
+        .contact-form label {
+            width: 100%;
+        }
+    }
+
 </style>
 
 <BaseLayout
